syntax = "proto3";
option go_package = "github.com/khoerling/flux/api/lib/protocol";

import "google/api/annotations.proto";

// OrganizationApplication
message OrganizationApplication {
  int64 id = 1;
  string name = 2;
}

// KYCProfile
//
// A user's KYC profile (they should only have one of these)
message KYCProfile {
  int64 id = 1;
  string given_name = 2;
  string family_name = 3;
  string date_of_birth = 4; // (YYYY-MM-DD)
  string social_security_number = 5;  // (XXX-XX-XXX for US users only)
  repeated Address addresses = 6;
  repeated ThirdPartyUserAccount third_party_user_accounts = 7;
}

// User
//
// A user which is shared across customer applications
message User {
  int64 id = 1;
  string email = 2;
  string phone = 3;
  KYCProfile kyc_profile = 4;
  repeated Organization organizations = 5;
}

// Organization
//
// an organization containing users, a user is one to many to organizations
message Organization {
  int64 id = 1;
  string name = 2;
  repeated User users = 3;
  repeated OrganizationApplication applications = 4;
}

// ThirdPartyUserAccount
// 
// An object representing the user's account at a third party API
message ThirdPartyUserAccount {
  int64 id = 1;
  string partner_id = 2; // (an identifier for the third party API)
  string external_id = 3; // (an identifier for the account in the third party system)
  string credential_id = 4; // (an identifier for the user's third party credentials when available. this maps to KMS?)
  string status = 5;
  repeated PaymentMethod payment_methods = 6;
}

// Address
//
// A user's residential address which belongs to the profile (they can have many.)
message Address {
  int64 id = 1;
  bool is_default = 2;
  string street_1 = 3;
  string street_2 = 4;
  string city = 5;
  string state = 6; // (ISO 3166-1 - Alpha 2)
  string postal_code = 7;
  string country = 8; // (ISO 2)
}

// PaymentMethod
//
//  A third party user account payment method (ACH, SEPA, Debit Card, Credit Card, etc.)
message PaymentMethod {
  int64 id = 1;
  string external_id = 2;
  string type = 3;
  string status = 4;
}


message UserDataRequest {}
message UserDataResponse {
  User user = 1;
}

message PricingDataRequest {}

message PricingRate {
  map<string,float> rate = 1;
}

message PricingDataResponse {
  // {"AAVEARS":{"ARS":34418.19149999999856,"AAVE":0.00002905440281486027648600}
  map<string,PricingRate> rates = 1;
}

message OneTimePasscodeRequest {
  string email_or_phone = 1;
}
message OneTimePasscodeResponse {}

// good for 10 minutes?
// 0-9 code 6 digits
message OneTimePasscodeVerifyRequest {
  string email_or_phone = 1;
  string code = 2;
}
message OneTimePasscodeVerifyResponse {
}

service API {
  rpc UserData(UserDataRequest) returns (UserDataResponse) {
    option (google.api.http) = {
      get: "/flux/user-data"
    };
  }

  rpc PricingData(PricingDataRequest) returns (PricingDataResponse) {
    option (google.api.http) = {
      get: "/flux/pricing-data"
    };
  }

  rpc OneTimePasscode(OneTimePasscodeRequest) returns (OneTimePasscodeResponse) {
    option (google.api.http) = {
      get: "/flux/auth/one-time-passcode"
    };
  }

  rpc OneTimePasscodeVerify(OneTimePasscodeVerifyRequest) returns (OneTimePasscodeVerifyResponse) {
    option (google.api.http) = {
      get: "/flux/auth/one-time-passcode-verify"
    };
  }
}